--- a/arch/arm/boot/dts/am335x-tqma335x.dtsi
+++ b/arch/arm/boot/dts/am335x-tqma335x.dtsi
@@ -1,6 +1,6 @@
 // SPDX-License-Identifier: GPL-2.0-or-later OR MIT
 /*
- * Copyright (C) 2014,2021 TQ-Systems GmbH - http://www.tq-group.com/
+ * Copyright (C) 2014, 2021 - 2022 TQ-Systems GmbH - https://www.tq-group.com/
  *
  * Based on:
  * Copyright (C) 2012 Texas Instruments Incorporated - http://www.ti.com/
