dt: bindings: add bindings for TQMa93xxLA SOM
TQMa93xxLA is a SOM variant in the TQ-Systems GmbH TQMa9xxx series using
NXP i.MX93 CPU on an LGA type board.
MBa9xxxCA is a starterkit base board for TQMa93xxLA on an adapter board.

Signed-off-by: Markus Niebel <Markus.Niebel@ew.tq-group.com>

--- a/Documentation/devicetree/bindings/arm/fsl.yaml
+++ b/Documentation/devicetree/bindings/arm/fsl.yaml
@@ -841,6 +841,21 @@ properties:
           - const: fsl,imx93
 
       - description:
+          TQMa93xxLA is a series of LGA SOM featuring NXP i.MX93 in
+          system-on-chip 11x11 mm package variants. It is designed to
+          be soldered on different carrier boards.
+          All CPU variants use the same device tree hence only one compatible
+          is needed. Bootloader disables all features not present in the
+          assembled SOC.
+          MBa9xxxCA mainboard can be used as starterkit for the SOM
+          soldered on an adapter board
+        items:
+          - enum:
+              - tq,imx93-tqma9352la-mba9xxxca # TQ-Systems GmbH i.MX93 TQMa93xxLA SOM on MBa9xxxCA
+          - const: tq,imx93-tqma9352la        # TQ-Systems GmbH i.MX93 TQMa93xxLA SOM
+          - const: fsl,imx93
+
+      - description:
           Freescale Vybrid Platform Device Tree Bindings
 
           For the Vybrid SoC familiy all variants with DDR controller are supported,
