ARM: dts: am57xx-tqma57xx: fix DSP2 setup on AM572x/AM574x SoCs
- Adjust naming of the shared DMA pool to match the DSP1 region
- Assign memory region to DSP2 and actually enable it
- Move dsp-common DTSI include to SoC-specific files to get correct
  mailbox/timer setup for DSP2

Signed-off-by: Matthias Schiffer <matthias.schiffer@tq-group.com>

--- a/arch/arm/boot/dts/am571x-tqma57xx.dtsi
+++ b/arch/arm/boot/dts/am571x-tqma57xx.dtsi
@@ -9,6 +9,7 @@
 #include "am5718.dtsi"
 #include "am57xx-tqma57xx.dtsi"
 #include "dra72x-mmc-iodelay.dtsi"
+#include "dra7-ipu-dsp-common.dtsi"
 
 &mmc2 {
 	pinctrl-names = "default", "hs", "ddr_1_8v", "hs200_1_8v";
