arm64: dts: tqma8mq-mba8mx: Hog gpio irq as input
Request GPIOs as input, which are used as IRQs inputs.

Signed-off-by: Tobias Zimmermann <Tobias.Zimmermann@tq-group.com>

--- a/arch/arm64/boot/dts/freescale/imx8mq-tqma8mq-mba8mx.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mq-tqma8mq-mba8mx.dts
@@ -60,6 +60,15 @@
 	};
 };
 
+&gpio1 {
+	portexpander-irq-hog {
+		gpio-hog;
+		gpios = <9 0>;
+		input;
+		line-name = "IRQ_PORTEXPANDER#";
+	};
+};
+
 &i2c1 {
 	expander2: gpio@25 {
 		compatible = "nxp,pca9555";
