arm64: dts: tqma8mq: Hog gpio irq as input
Request GPIOs as input, which are used as IRQs inputs.

Signed-off-by: Tobias Zimmermann <Tobias.Zimmermann@tq-group.com>

--- a/arch/arm64/boot/dts/freescale/imx8mq-tqma8mq.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8mq-tqma8mq.dtsi
@@ -91,6 +91,15 @@
 	power-supply = <&sw1c_reg>;
 };
 
+&gpio1 {
+	rtc-irq-hog {
+		gpio-hog;
+		gpios = <1 0>;
+		input;
+		line-name = "RTC_IRQ#";
+	};
+};
+
 &i2c1 {
 	clock-frequency = <100000>;
 	pinctrl-names = "default", "gpio";
