--- a/arch/arm64/boot/dts/freescale/imx8qxp.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8qxp.dtsi
@@ -71,6 +71,9 @@
 		mipi-dsi1 = &mipi1_dsi_host;
 		vpu-core0 = &vpu_core0;
 		vpu-core1 = &vpu_core1;
+		spi0 = &lpspi1;
+		spi1 = &lpspi2;
+		spi2 = &lpspi3;
 	};
 
 	cpus: cpus {
