--- a/arch/arm64/boot/dts/freescale/imx8mp-tqma8mpql-mba8mpxl.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mp-tqma8mpql-mba8mpxl.dts
@@ -221,9 +221,51 @@
 		linux,cma {
 			compatible = "shared-dma-pool";
 			reusable;
-			size = <0 0x38000000>;
-			alloc-ranges = <0 0x40000000 0 0xB0000000>;
+			/*
+			 * 640 MiB total, SOM should have at least 1024 MiB
+			 * limit range to 1024 - 128 - 16 MiB, to leave room:
+			 * 128 MiB generic
+			 * 16 MiB: allow optional carveout for M7 at 0x77000000
+			 */
+			size = <0 0x28000000>;
+			alloc-ranges = <0 0x40000000 0 0x77000000>;
 			linux,cma-default;
+		};
+
+		/*
+		 * 0x7700_0000 ~ 0x77FF_FFFF is reserved for M7
+		 * Must not be used from code running on Cortex-A cluster
+		 * Must be in sync with linker settings for M7
+		 */
+		m7_reserved: m7@77000000 {
+			reg = <0 0x77000000 0 0x1000000>;
+			no-map;
+			status = "disabled";
+		};
+
+		vdev0vring0: vdev0vring0@55000000 {
+			reg = <0 0x55000000 0 0x8000>;
+			no-map;
+			status = "disabled";
+		};
+
+		vdev0vring1: vdev0vring1@55008000 {
+			reg = <0 0x55008000 0 0x8000>;
+			no-map;
+			status = "disabled";
+		};
+
+		rsc_table: rsc-table@550ff000 {
+			reg = <0 0x550ff000 0 0x1000>;
+			no-map;
+			status = "disabled";
+		};
+
+		vdevbuffer: vdevbuffer@55400000 {
+			compatible = "shared-dma-pool";
+			reg = <0 0x55400000 0 0x100000>;
+			no-map;
+			status = "disabled";
 		};
 	};
 
