HACK: arm64: dts: ti: k3-am64-tqma64xxl-mbax4xxl: add PHY LED configuration
Signed-off-by: Matthias Schiffer <matthias.schiffer@tq-group.com>

--- a/arch/arm64/boot/dts/ti/k3-am642-tqma64xxl-mbax4xxl.dts
+++ b/arch/arm64/boot/dts/ti/k3-am642-tqma64xxl-mbax4xxl.dts
@@ -208,6 +208,10 @@
 		ti,tx-fifo-depth = <DP83867_PHYCR_FIFO_DEPTH_4_B_NIB>;
 		ti,rx-internal-delay = <DP83867_RGMIIDCTL_2_00_NS>;
 		ti,clk-output-sel = <DP83867_CLK_O_SEL_OFF>;
+		/* LED0: 1Gbit/s, LED1: link+activity */
+		ti,led-function = <0x00b5>;
+		/* LED0/1: active high, driven by PHY function */
+		ti,led-ctrl = <0x1144>;
 	};
 };
 
@@ -237,6 +241,10 @@
 		ti,tx-fifo-depth = <DP83867_PHYCR_FIFO_DEPTH_4_B_NIB>;
 		ti,rx-internal-delay = <DP83867_RGMIIDCTL_2_00_NS>;
 		ti,clk-output-sel = <DP83867_CLK_O_SEL_OFF>;
+		/* LED0: 1Gbit/s, LED1: link+activity */
+		ti,led-function = <0x00b5>;
+		/* LED0/1: active high, driven by PHY function */
+		ti,led-ctrl = <0x1144>;
 	};
 
 	icssg1_phy0c: ethernet-phy@c {
@@ -249,6 +257,10 @@
 		ti,tx-fifo-depth = <DP83867_PHYCR_FIFO_DEPTH_4_B_NIB>;
 		ti,rx-internal-delay = <DP83867_RGMIIDCTL_2_00_NS>;
 		ti,clk-output-sel = <DP83867_CLK_O_SEL_OFF>;
+		/* LED0: 1Gbit/s, LED1: link+activity */
+		ti,led-function = <0x00b5>;
+		/* LED0/1: active high, driven by PHY function */
+		ti,led-ctrl = <0x1144>;
 	};
 };
 
