arm64: dts: ti: k3-am64-tqma64xxl-mbax4xxl: add NAFE13388 ADC
There is no kernel driver for the NAFE13388, so only a trivial spidev
binding without the required GPIOs is used.

Signed-off-by: Matthias Schiffer <matthias.schiffer@tq-group.com>

--- a/arch/arm64/boot/dts/ti/k3-am642-tqma64xxl-mbax4xxl.dts
+++ b/arch/arm64/boot/dts/ti/k3-am642-tqma64xxl-mbax4xxl.dts
@@ -336,7 +336,14 @@
 	ti,pindir-d0-out-d1-in;
 	status = "okay";
 
-	/* adc@0: NXP NAFE13388 */
+	adc@0 {
+		compatible = "nxp,nafe13388";
+		reg = <0>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&main_spi0_adc_pins>;
+		spi-max-frequency = <32000000>;
+		spi-cpha;
+	};
 };
 
 /* UART/USB adapter port 1 */
