arm64: dts: tqma8mpql: Remove reserved memory regions for unused DSP
Downstream kernel reserved memory at fixed addresses on SoC level for DSP
usage. This prevents creating a CMA of 640 MiB within 1 GiB due to
fragmented memory.
Fix this by removing the reserved memory regions and their references.

Signed-off-by: Alexander Stein <alexander.stein@ew.tq-group.com>

--- a/arch/arm64/boot/dts/freescale/imx8mp-tqma8mpql.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8mp-tqma8mpql.dtsi
@@ -21,6 +21,11 @@
 	cpu-supply = <&buck2_reg>;
 };
 
+/* Remove DSP references to removed reserved memory regions */
+&dsp {
+	/delete-property/ memory-region;
+};
+
 &flexspi {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_flexspi0>;
@@ -194,6 +199,15 @@
 
 &ml_vipsi {
 	status = "okay";
+};
+
+/* Remove reserved memory referenced by unused DSP */
+&resmem {
+	/delete-node/ dsp@92400000;
+	/delete-node/ dsp_reserved_heap;
+	/delete-node/ vdev0vring0@942f0000;
+	/delete-node/ vdev0vring1@942f8000;
+	/delete-node/ vdev0buffer@94300000;
 };
 
 &sdma2 {
