--- a/arch/arm64/boot/dts/ti/k3-am625-tqma62xx-mba62xx.dts
+++ b/arch/arm64/boot/dts/ti/k3-am625-tqma62xx-mba62xx.dts
@@ -216,6 +216,10 @@
 		ti,rx-internal-delay = <DP83867_RGMIIDCTL_2_00_NS>;
 		ti,fifo-depth = <DP83867_PHYCR_FIFO_DEPTH_4_B_NIB>;
 		ti,clk-output-sel = <DP83867_CLK_O_SEL_OFF>;
+		/* LED0: 1Gbit/s, LED2: link+activity */
+		ti,led-function = <0x0b05>;
+		/* LED0/2: active high, driven by PHY function */
+		ti,led-ctrl = <0x1414>;
 	};
 
 	cpsw3g_phy3: ethernet-phy@3 {
@@ -227,6 +231,10 @@
 		ti,rx-internal-delay = <DP83867_RGMIIDCTL_2_00_NS>;
 		ti,fifo-depth = <DP83867_PHYCR_FIFO_DEPTH_4_B_NIB>;
 		ti,clk-output-sel = <DP83867_CLK_O_SEL_OFF>;
+		/* LED0: 1Gbit/s, LED2: link+activity */
+		ti,led-function = <0x0b05>;
+		/* LED0/2: active high, driven by PHY function */
+		ti,led-ctrl = <0x1414>;
 	};
 };
 
