arm64: dts: imx8mm: Disable display-subsystem by default
Non-critical devices shall be disabled by default. Also add a label to
be able to enable it later on.
Note: Now every board which requires this subsystem needs to explicitly
enable this node!.

Signed-off-by: Alexander Stein <alexander.stein@ew.tq-group.com>

--- a/arch/arm64/boot/dts/freescale/imx8mm.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8mm.dtsi
@@ -342,9 +342,10 @@
 		external-pin-tamper = "disabled";
 	};
 
-	display-subsystem {
+	display_subsystem: display-subsystem {
 		compatible = "fsl,imx-display-subsystem";
 		ports = <&lcdif_disp0>;
+		status = "disabled";
 	};
 
 	soc: soc@0 {
