arm64: dts: imx8mn: Disable display-subsystem by default
Non-critical devices shall be disabled by default. Also add a label to
be able to enable it later on.
Note: Now every board which requires this subsystem needs to explicitly
enable this node!.

Signed-off-by: Alexander Stein <alexander.stein@ew.tq-group.com>

--- a/arch/arm64/boot/dts/freescale/imx8mn.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8mn.dtsi
@@ -250,9 +250,10 @@
 			      "sys_pll1_800m", "dram_pll_div";
 	};
 
-	display-subsystem {
+	display_subsystem: display-subsystem {
 		compatible = "fsl,imx-display-subsystem";
 		ports = <&lcdif_disp0>;
+		status = "disabled";
 	};
 
 	pmu {
