--- a/arch/arm64/boot/dts/freescale/mba8mx.dtsi
+++ b/arch/arm64/boot/dts/freescale/mba8mx.dtsi
@@ -184,6 +184,10 @@
 			ti,dp83867-rxctrl-strap-quirk;
 			ti,clk-output-sel = <DP83867_CLK_O_SEL_OFF>;
 			enet-phy-lane-no-swap;
+			/* LED0: Link, LED2: activity */
+			ti,led-function = <0x0100>;
+			/* active low, LED0/2 driven by phy */
+			ti,led-ctrl = <0x1010>;
 			reset-gpios = <&expander2 7 GPIO_ACTIVE_LOW>;
 			reset-assert-us = <500000>;
 			reset-deassert-us = <500>;
