arm64: dts: imx8qm: add DT for TQMa8x using Full-HD LVDS G133HAN01 display
Both LVDS ports have their corresponding DT file.

Signed-off-by: Alexander Stein <alexander.stein@ew.tq-group.com>

--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -362,9 +362,13 @@ dtb-$(CONFIG_ARCH_MXC) += imx8qm-pcieax2pciebx1-revd.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8qm-mek-revd-root.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8qm-tqma8qm-mba8x.dtb
 
+imx8qm-tqma8qm-mba8x-lvds0-g133han01-dtbs += imx8qm-tqma8qm-mba8x.dtb imx8qm-tqma8qm-mba8x-lvds0-g133han01.dtbo
 imx8qm-tqma8qm-mba8x-lvds0-tm070jvhg33-dtbs += imx8qm-tqma8qm-mba8x.dtb imx8qm-tqma8qm-mba8x-lvds0-tm070jvhg33.dtbo
+imx8qm-tqma8qm-mba8x-lvds1-g133han01-dtbs += imx8qm-tqma8qm-mba8x.dtb imx8qm-tqma8qm-mba8x-lvds1-g133han01.dtbo
 imx8qm-tqma8qm-mba8x-lvds1-tm070jvhg33-dtbs += imx8qm-tqma8qm-mba8x.dtb imx8qm-tqma8qm-mba8x-lvds1-tm070jvhg33.dtbo
+dtb-$(CONFIG_ARCH_MXC) += imx8qm-tqma8qm-mba8x-lvds0-g133han01.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8qm-tqma8qm-mba8x-lvds0-tm070jvhg33.dtb
+dtb-$(CONFIG_ARCH_MXC) += imx8qm-tqma8qm-mba8x-lvds1-g133han01.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8qm-tqma8qm-mba8x-lvds1-tm070jvhg33.dtb
 
 #dtb-$(CONFIG_ARCH_MXC) += imx8qxp-ai_ml.dtb
