arm64: dts: tqma8xqps: add DT for TQMa8XxS using Full-HD LVDS G133HAN01 display
This is for attaching a AUO G133HAN01 display on LVDS interface on X48.
fsl,dual-channel uses both ldb peripherals, ldb1 as primary one. They are
cross-referenced using fsl,auxldb. Both LDB PHYs need to be enabled though.

Signed-off-by: Alexander Stein <alexander.stein@ew.tq-group.com>

--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -462,6 +462,7 @@ imx8qxp-tqma8xqp-mba8xx-lvds-g133han01-dtbs = imx8qxp-tqma8xqp-mba8xx.dtb tqma8x
 imx8qxp-tqma8xqp-mba8xx-lvds0-tm070jvhg33-dtbs = imx8qxp-tqma8xqp-mba8xx.dtb tqma8xx-display.dtbo mba8xx-lvds0-tm070jvhg33.dtbo
 imx8qxp-tqma8xqp-mba8xx-lvds1-tm070jvhg33-dtbs = imx8qxp-tqma8xqp-mba8xx.dtb tqma8xx-display.dtbo mba8xx-lvds1-tm070jvhg33.dtbo
 imx8qxp-tqma8xqp-mba8xx-rpmsg-dtbs = imx8qxp-tqma8xqp-mba8xx.dtb tqma8xx-rpmsg.dtbo
+imx8qxp-tqma8xqps-mb-smarc-2-lvds-g133han01-dtbs = imx8qxp-tqma8xqps-mb-smarc-2.dtb tqma8xx-display.dtbo mb-smarc-2-lvds-g133han01.dtbo
 imx8qxp-tqma8xqps-mb-smarc-2-lvds0-tm070jvhg33-dtbs = imx8qxp-tqma8xqps-mb-smarc-2.dtb tqma8xx-display.dtbo mb-smarc-2-lvds0-tm070jvhg33.dtbo
 imx8qxp-tqma8xqps-mb-smarc-2-lvds1-tm070jvhg33-dtbs = imx8qxp-tqma8xqps-mb-smarc-2.dtb tqma8xx-display.dtbo mb-smarc-2-lvds1-tm070jvhg33.dtbo
 dtb-$(CONFIG_ARCH_MXC) += imx8qxp-tqma8xqp-mba8xx-lvds-g133han01.dtb
@@ -469,8 +470,10 @@ dtb-$(CONFIG_ARCH_MXC) += imx8qxp-tqma8xqp-mba8xx-lvds0-tm070jvhg33.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8qxp-tqma8xqp-mba8xx-lvds1-tm070jvhg33.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8qxp-tqma8xqp-mba8xx-rpmsg.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8qxp-tqma8xqps-mb-smarc-2.dtb
+dtb-$(CONFIG_ARCH_MXC) += imx8qxp-tqma8xqps-mb-smarc-2-lvds-g133han01.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8qxp-tqma8xqps-mb-smarc-2-lvds0-tm070jvhg33.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx8qxp-tqma8xqps-mb-smarc-2-lvds1-tm070jvhg33.dtb
+dtb-$(CONFIG_ARCH_MXC) += imx8qxp-tqma8xqps-mb-smarc-2-lvds-g133han01.dtb
 
 dtb-$(CONFIG_ARCH_MXC) += imx93-14x14-evk.dtb \
 			  imx93-14x14-evk-tja1103.dtb imx93-14x14-evk-rm67199.dtb \
