arm64: dts: freescsale: imx93-tqma9352-mba93xxla: add irq for temp sensor
This adds muxing and configuration of the irq output of the temp
sensor on TQMa93xx that is connected to a GPIO line on MBa93xxLA

Signed-off-by: Markus Niebel <Markus.Niebel@ew.tq-group.com>

--- a/arch/arm64/boot/dts/freescale/imx93-tqma9352-mba93xxla.dts
+++ b/arch/arm64/boot/dts/freescale/imx93-tqma9352-mba93xxla.dts
@@ -244,6 +244,13 @@
 		/* 24 */ "", "", "", "",
 		/* 28 */ "", "", "", "";
 
+	temp-alarm-mod-hog {
+		gpio-hog;
+		gpios = <11 GPIO_ACTIVE_LOW>;
+		input;
+		line-name = "BM2_TEMP_EVENT_MOD#";
+	};
+
 	expander-irq-hog {
 		gpio-hog;
 		gpios = <12 GPIO_ACTIVE_LOW>;
