arm64: dts: imx93-tqma9352: enable lpm driver
This is needed for power management. DVFS / CPU frequency scaling
using existing frameworks is not available yet. Enable the device
node and assign the soc-supply to the device to enable switching
between normal drive (ND) and over drive (OD) mode.

Signed-off-by: Markus Niebel <Markus.Niebel@ew.tq-group.com>

--- a/arch/arm64/boot/dts/freescale/imx93-tqma9352.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx93-tqma9352.dtsi
@@ -309,6 +309,11 @@
 	};
 };
 
+&lpm {
+	soc-supply = <&buck1>;
+	status = "okay";
+};
+
 &usdhc1 {
 	pinctrl-names = "default", "state_100mhz", "state_200mhz";
 	pinctrl-0 = <&pinctrl_usdhc1>;
