--- a/arch/arm64/boot/dts/freescale/Makefile
+++ b/arch/arm64/boot/dts/freescale/Makefile
@@ -561,6 +561,7 @@ imx93-tqma9352-mba93xxca-rpmsg-dtbs := imx93-tqma9352-mba93xxca.dtb imx93-tqma93
 imx93-tqma9352-mba93xxla-lvds-tm070jvhg33-dtbs := imx93-tqma9352-mba93xxla.dtb imx93-tqma9352-mba93xxla-lvds-tm070jvhg33.dtbo
 imx93-tqma9352-mba93xxla-rpmsg-dtbs := imx93-tqma9352-mba93xxla.dtb imx93-tqma9352-mba93xx-rpmsg.dtbo
 
+dtb-$(CONFIG_ARCH_MXC) += imx93-tqma9352-mba91xxca.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx93-tqma9352-mba93xxca.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx93-tqma9352-mba93xxca-lvds-tm070jvhg33.dtb
 dtb-$(CONFIG_ARCH_MXC) += imx93-tqma9352-mba93xxca-rpmsg.dtb
