--- a/arch/arm64/boot/dts/freescale/imx8qm-tqma8qm-mba8x.dts
+++ b/arch/arm64/boot/dts/freescale/imx8qm-tqma8qm-mba8x.dts
@@ -629,7 +629,9 @@
 
 &hdmi {
 	compatible = "cdn,imx8qm-dp";
+	firmware-name = "dpfw.bin";
 	lane-mapping = <0x1b>;
+	hdcp-config = <0x2>;
 	status = "okay";
 };
 
