media: dt-bindings: ovti,ov9282: Allow common video-interface-devices props
Same change as for sony,imx290 in commit a85067916669
("media: dt-bindings: sony,imx290: Allow props from video-interface-devices"),
to allow common properties like rotation and orientation.

Signed-off-by: Matthias Schiffer <matthias.schiffer@tq-group.com>

--- a/Documentation/devicetree/bindings/media/i2c/ovti,ov9282.yaml
+++ b/Documentation/devicetree/bindings/media/i2c/ovti,ov9282.yaml
@@ -18,6 +18,9 @@ description:
   sheet. Image data is sent through MIPI CSI-2.
   OV9281 has a different lens chief ray angle.
 
+allOf:
+  - $ref: /schemas/media/video-interface-devices.yaml#
+
 properties:
   compatible:
     enum:
@@ -74,7 +77,7 @@ required:
   - clocks
   - port
 
-additionalProperties: false
+unevaluatedProperties: false
 
 examples:
   - |
