arm64: dt: imx8mp-tqma8mpxl-mba8mpxl: rename CSI camera dts
As HDMI is enable by default, there is little sense in naming it in the
DT files. Provide a backward compatible file, similar to commit
b40c003792df9 ("arm64: dt: imx8mp-tqma8mpxl-mba8mpxl: add HDMI support tree")

Signed-off-by: Alexander Stein <alexander.stein@ew.tq-group.com>

--- a/arch/arm64/boot/dts/freescale/imx8mp-tqma8mpql-mba8mpxl-hdmi-imx327.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mp-tqma8mpql-mba8mpxl-hdmi-imx327.dts
@@ -5,5 +5,8 @@
  * Author: Alexander Stein
  */
 
-#include "imx8mp-tqma8mpql-mba8mpxl-hdmi.dts"
-#include "imx8mp-mba8mpxl-imx327.dtsi"
+/*
+ * Note: This is just a transitional device tree file and will be removed.
+ * Use the device tree included below instead.
+ */
+#include "imx8mp-tqma8mpql-mba8mpxl-imx327.dts"
