--- a/arch/arm64/boot/dts/freescale/imx8mp-tqma8mpql-mba8mpxl-hdmi.dts
+++ b/arch/arm64/boot/dts/freescale/imx8mp-tqma8mpql-mba8mpxl-hdmi.dts
@@ -5,5 +5,8 @@
  * Author: Alexander Stein
  */
 
-/* Note: This is just a transitional device tree file */
+/*
+ * Note: This is just a transitional device tree file and will be removed.
+ * Use the device tree included below instead.
+ */
 #include "imx8mp-tqma8mpql-mba8mpxl.dts"
